--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       margin: 0;
     }
   </style>
-  <script src="/libraries/p5.js"></script>
-  <script src="/libraries/matter.js"></script>
+  <script src="/lib/p5.js"></script>
+  <script src="/lib/matter.js"></script>
   <script src="new1.js"></script>
 </head>
 
